grammar.js
    source_file: $ => seq(
      optional('unit'), _statement_list($),
    ),

    line_comment: $ => token(seq(
      '%', /.*/
    )),

    constvar_declaration: $ => seq(
      choice('const', 'var'),
      optional($.pervasive_attr),
      optional($.register_attr),
      $._name_list,
      optional(seq(
        ':', field('type_spec', $._type)
      )),
      optional(seq(
        ':=', field('initializer', $._expression),
      )),
    ),

    _expression: $ => choice(
      $.literal_expression,
      $.objclass_expression,
      $.init_expression,
      $.nil_expression,
      $.sizeof_expression,
      $.binary_expression,
      $.unary_expression,
      $.paren_expression,

      $.self_expression,
      $.nameref_expression,
      $.field_expression,
      $.deref_expression,
      $.cheat_expression,
      $.nat_cheat_expression,
      $.arrow_expression,
      $.indirect_expression,
      $.bits_expression,
      $.call_expression,
    ),

    _type: $ => choice(
      $.primitive_type,
      $.nameref_type,
      $.range_type,
      $.enum_type,
      $.array_type,
      $.set_type,
      $.record_type,
      $.union_type,
      $.pointer_type,
      $.function_type,
      $.procedure_type,
      $.collection_type,
      $.condition_type,
    ),

    identifier: $ => /[a-zA-Z_][a-zA-Z_0-9]*/,

    _name_list: $ => sepBy1(',', field('name', $.identifier)),
