test/corpus/source_files.txt
================================================================================
line comments
================================================================================

% wa
%
%waou

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (line_comment)
  (line_comment))

================================================================================
block comments - minimal
================================================================================

/**/
/* */

--------------------------------------------------------------------------------

(source_file
  (block_comment)
  (block_comment))

================================================================================
block comments - multi line
================================================================================

/* /* abcd % * / 


 */ */

--------------------------------------------------------------------------------

(source_file
  (block_comment))

================================================================================
block comments - sibling nodes
================================================================================

/* /* abcd */ /* ae */ */

--------------------------------------------------------------------------------

(source_file
  (block_comment))

================================================================================
block comments - missing terminating, bare min
================================================================================

/*

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (UNEXPECTED '/')))

================================================================================
block comments - missing terminating, mismatched nesting
================================================================================

/* /* abcd */

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (UNEXPECTED '/'))
  (block_comment))

================================================================================
block comments - missing terminating, trailing ws
================================================================================

/* /* abcd */            

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (UNEXPECTED '/'))
  (block_comment))

================================================================================
block comments - missing endings
================================================================================
/*/*
--------------------------------------------------------------------------------

(source_file
  (ERROR
    (UNEXPECTED '/')
    (UNEXPECTED '/')))

================================================================================
block comments - content with missing endings
================================================================================
/*/*
const a := yay
--------------------------------------------------------------------------------

(source_file
  (ERROR
    (UNEXPECTED '/')
    (UNEXPECTED '/'))
  (constvar_declaration
    (identifier)
    (identifier)))
